# example-cli

./: .gitignore  Dockerfile  README.md  pyproject.toml
.kiro/agents/: reporte-vulnerabilidades.md
.kiro/hooks/: git-fetch-on-load.kiro.hook
.kiro/specs/time-service/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md  windows-cmd.md
app/: main.py
app/routers/: time.py
app/schemas/: time.py
app/services/: time.py
tests/: test_final_validation.py
