[project]
name = "time-service"
version = "1.0.0"
description = "Serviço de consulta de horário atual com suporte a zonas horárias IANA"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "tzdata",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
    "httpx",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
